@@ -59,7 +59,7 @@
         <CollisionGeometry primitive-id="c" max-tri-area="1"/>
       </RigidBody>
 
-      <RevoluteJoint id="q" q_init="1.57079632679" qd="0" global-position="0 0 0" inboard-link-id="base" outboard-link-id="l1" type="revolute" maxforce="10000" lolimit="-1" hilimit="3.14" global-axis="0 0 1" vviscous-friction-coeff=".1" />
+      <RevoluteJoint id="q" q="1.57079632679" qd="0" global-position="0 0 0" inboard-link-id="base" outboard-link-id="l1" type="revolute" maxforce="10000" lolimit="-1" hilimit="3.14" global-axis="0 0 1" vviscous-friction-coeff=".1" />
       <RevoluteJoint id="q2" qq="0" qd="0" global-position="0 -5 0" inboard-link-id="l1" outboard-link-id="l2" maxforce="10000" lolimit="-.1" hilimit=".1" global-axis="0 0 1" vviscous-friction-coeff=".1" />
       <RevoluteJoint id="q3" qq="0" qd="0" global-position="0 -10 0" inboard-link-id="l2" outboard-link-id="l3" maxforce="10000" lolimit="-.5" hilimit=".5" global-axis="0 0 1" vviscous-friction-coeff=".1" />
       <RevoluteJoint id="q4" qq="0" qd="0" global-position="0 -15 0" inboard-link-id="l3" outboard-link-id="l4" maxforce="10000" lolimit="-.5" hilimit=".5" global-axis="0 0 1" vviscous-friction-coeff=".1" />
